<resources>
    <string name="app_name">MedicineFinder</string>
    <string name="title_search">Search</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_map">Map</string>
    <string name="Terms">By signing in, you agree to the <font color='#008000'>MedicineFinder terms and condition</font>.</string>
    <string name="title_bookmark">bookmark</string>


    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_Con_password_hint">Con-Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_drug">Drugs</string>
    <string name="menu_upload_drug">Upload Drug</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_user_dashboard">UserDashboardActivity</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="title_activity_user_dash">UserDashActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_google_maps">Map</string>
</resources>