<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.medicinefinder.ui.home.HomeFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.medicinefinder.ui.map.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.medicinefinder.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.example.medicinefinder.ui.notifications.NotificationsFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_notifications" />
</navigation>