<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_drug">

    <fragment
        android:id="@+id/nav_drug"
        android:name="com.example.myapplication.userdash.drug.DrugFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_drug" />

    <fragment
        android:id="@+id/nav_upload_drug"
        android:name="com.example.myapplication.userdash.uploaddrug.UploaddrugFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_upload_drug" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.userdash.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>